{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 49,
  "lineage": "a8b603e8-a73f-c1f3-eacd-26f092f3211d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a23ccb2cdd9286bb",
            "arn": "arn:aws:ec2:ap-south-1:383058400024:instance/i-09ee79345478f83d6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ee79345478f83d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Anubhav",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058aa34fa9b2cab78",
            "private_dns": "ip-10-0-1-252.ap-south-1.compute.internal",
            "private_ip": "10.0.1.252",
            "public_ip": "65.0.17.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e74a232b45c7181",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6948a2cbacbea73",
            "tags": {
              "Name": "apache_web_server"
            },
            "tags_all": {
              "Name": "apache_web_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c230bc47c598eb4d"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_secgroup",
            "module.ec2.aws_subnet.web_subnet",
            "module.ec2.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:internet-gateway/igw-0f61a37a57ab8a31c",
            "id": "igw-0f61a37a57ab8a31c",
            "owner_id": "383058400024",
            "tags": {
              "Name": "web_igw"
            },
            "tags_all": {
              "Name": "web_igw"
            },
            "vpc_id": "vpc-074716dd36806ba22"
          },
          "dependencies": [
            "module.ec2.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:route-table/rtb-039db4d04af0f4ec9",
            "id": "rtb-039db4d04af0f4ec9",
            "owner_id": "383058400024",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f61a37a57ab8a31c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routing_Table_web"
            },
            "tags_all": {
              "Name": "Routing_Table_web"
            },
            "vpc_id": "vpc-074716dd36806ba22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.web_igw",
            "module.ec2.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a1197f6fcb9deaf",
            "route_table_id": "rtb-039db4d04af0f4ec9",
            "subnet_id": "subnet-0b6948a2cbacbea73"
          },
          "dependencies": [
            "module.ec2.aws_internet_gateway.web_igw",
            "module.ec2.aws_route_table.web_rt",
            "module.ec2.aws_subnet.web_subnet",
            "module.ec2.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:security-group/sg-0c230bc47c598eb4d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c230bc47c598eb4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH for VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "383058400024",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-074716dd36806ba22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:subnet/subnet-0b6948a2cbacbea73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b6948a2cbacbea73",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383058400024",
            "tags": {
              "Name": "web_subnet"
            },
            "tags_all": {
              "Name": "web_subnet"
            },
            "vpc_id": "vpc-074716dd36806ba22"
          },
          "dependencies": [
            "module.ec2.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:vpc/vpc-074716dd36806ba22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcab09ae9024a28f",
            "default_route_table_id": "rtb-02ffef7129a7b78bb",
            "default_security_group_id": "sg-03ee02fc04f6304b4",
            "dhcp_options_id": "dopt-a2e851c9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-074716dd36806ba22",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02ffef7129a7b78bb",
            "owner_id": "383058400024",
            "tags": {
              "Name": "web_vpc"
            },
            "tags_all": {
              "Name": "web_vpc"
            }
          }
        }
      ]
    }
  ]
}